# music-hub

./: Cargo.toml  README.md  deploy-mainnet.sh  deploy.sh  dfx.json  project.json
.dfx/network/local/: network-id  replica-effective-config.json
.dfx/network/local/state/replicated_state/: registry.proto
.dfx/network/local/state/replicated_state/17ee969f4d56997f3cb9c0221c0f3f903d631a7c1a552782824808c315d8356a/: states_metadata.pbuf
.dfx/network/local/state/replicated_state/6e655e8caf4623e62de63754a2fd2a8cb2621c5a7899ed82efdcadb73a866cf5/: states_metadata.pbuf
.dfx/network/local/state/replicated_state/a6dfc52868e089ed1e5e5484e117df14d0f76fe21bde22e7555ed6a02f999124/: states_metadata.pbuf
backend/: .diesel.toml.swp  Cargo.toml  diesel.toml
backend/src/: auth.rs  db.rs  main.rs  pinata.rs  schema.rs
backend/src/models/: blob.rs  branch.rs  collaboration.rs  comment.rs  commit.rs  mod.rs  nft.rs  project.rs  revenue_share.rs  user.rs
backend/src/routes/: auth.rs  branches.rs  collaborations.rs  mod.rs  nfts.rs  projects.rs
docs/: api.md
frontend/: .env.example  .env.local  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  index.html  package-lock.json  package.json
frontend/src/components/: Navbar.tsx  ProtectedRoute.tsx
frontend/src/components/auth/: RegisterModal.tsx
frontend/src/components/layout/: Footer.tsx  Navbar.tsx
frontend/src/components/nft/: CreateNFTModal.tsx
frontend/src/components/projects/: CreateProjectModal.tsx
frontend/src/contexts/: AuthContext.tsx  ProjectContext.tsx
frontend/src/pages/: CreateNFT.tsx  Dashboard.tsx  Home.tsx  Login.tsx  Marketplace.tsx  NFTMarketplace.tsx  Profile.tsx  ProjectDetail.tsx  Projects.tsx  Register.tsx  Studio.tsx
frontend/src/services/: api.ts  icp.ts  nft_backend.ts  nftune_backend.did.js
keys/: .gitignore  api.env
src/NFTune_Backend/src/: collaboration.rs  nfts.rs  projects.rs
src/nftune_backend/: Cargo.toml  nftune_backend.did
src/nftune_backend/src/: auth.rs  lib.rs  projects.rs  storage.rs  types.rs
(+12 files in other folders)
