[package]
name = "music_hub_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-multipart = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "uuid", "chrono"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
